# Swarm

./: .gitignore  README.md  config.yaml  conftest.py  deliberation-campaign-guide.md  discover_niches.py  graph.py  ledger_state.py  main.py  mock_proxy.py  observability.py  openclaw_client.py  openclaw_mcp.py  optimizer_cron.py  patch_supervisor.py  requirements.txt  run_mock.sh  supervisor.py  swarm_mcp.py  swarm_memory.py  test_agent.py  test_supervisor_hybrid.py
benchmarks/: benchmark_suite_interactive_v1.json  benchmark_suite_v1.json  config_target_benchmark_v1.json  (+1 more)
prediction_core/python/: README.md  pyproject.toml
prediction_core/python/docs/: reuse-map.md
prediction_core/python/src/prediction_core/analytics/: __init__.py
prediction_core/python/src/prediction_core/calibration/: __init__.py
prediction_core/python/src/prediction_core/evaluation/: __init__.py  metrics.py
prediction_core/python/src/prediction_core/paper/: __init__.py  simulation.py
prediction_core/python/src/prediction_core/replay/: __init__.py  signatures.py
prediction_core/python/src/weather_pm/: __init__.py  cli.py  decision.py  execution_features.py  market_parser.py  models.py  neighbor_context.py  pipeline.py  polymarket_client.py  polymarket_live.py  resolution_parser.py  scoring.py
prediction_core/python/tests/: test_cli_score_market.py  test_decision.py  test_evaluation_metrics.py  test_execution_features.py  test_market_parser.py  test_neighbor_context.py  test_paper_simulation.py  test_pipeline.py  test_polymarket_client.py  test_polymarket_live.py  test_replay_signatures.py  test_resolution_parser.py  test_scoring.py  test_smoke.py
prediction_core/rust/: Cargo.toml  README.md
prediction_core/rust/crates/live_engine/: Cargo.toml
prediction_core/rust/crates/live_engine/src/: lib.rs
prediction_core/rust/crates/pm_book/: Cargo.toml
prediction_core/rust/crates/pm_book/src/: lib.rs
prediction_core/rust/crates/pm_executor/: Cargo.toml
prediction_core/rust/crates/pm_executor/src/: lib.rs
prediction_core/rust/crates/pm_ledger/: Cargo.toml
prediction_core/rust/crates/pm_ledger/src/: lib.rs
prediction_core/rust/crates/pm_risk/: Cargo.toml
prediction_core/rust/crates/pm_risk/src/: lib.rs
prediction_core/rust/crates/pm_signal/: Cargo.toml
prediction_core/rust/crates/pm_signal/src/: lib.rs
prediction_core/rust/crates/pm_storage/: Cargo.toml
prediction_core/rust/crates/pm_storage/src/: lib.rs  runtime_integration.rs
prediction_core/rust/crates/pm_types/: Cargo.toml
prediction_core/rust/crates/pm_types/src/: lib.rs
prediction_core/rust/scripts/: check_pm_storage_runtime.sh  run_pm_storage_runtime_test.sh
prediction_core/rust/xtask/: Cargo.toml
prediction_core/rust/xtask/src/: main.rs
(+611 files in other folders)
