[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-core-python"
version = "0.1.0"
description = "Canonical Python packages for prediction_core"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prediction_core*", "weather_pm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
