[package]
name = "live_engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pm_book = { path = "../pm_book" }
pm_executor = { path = "../pm_executor" }
pm_ledger = { path = "../pm_ledger" }
pm_risk = { path = "../pm_risk" }
pm_signal = { path = "../pm_signal" }
pm_storage = { path = "../pm_storage" }
pm_types = { path = "../pm_types" }
