[package]
name = "pm_storage"
version.workspace = true
edition.workspace = true

[dependencies]
pm_executor = { path = "../pm_executor" }
pm_ledger = { path = "../pm_ledger" }
pm_risk = { path = "../pm_risk" }
pm_signal = { path = "../pm_signal" }
pm_types = { path = "../pm_types" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true }

[dev-dependencies]
chrono.workspace = true
sqlx = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
